# publis

./: .gitignore  Cargo.toml  README.md  install.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml  rust.yml
npm/: binary.js  install.js
src/: bundle.rs  main.rs
src/s3/: client.rs  config.rs  mod.rs  model.rs
