[package]
name = "publis"
version = "0.2.2"
authors = ["David Jobe <david.jobe@mobility46.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "publis"

[dependencies]
rusoto = "0.24.2"
rusoto_core = "0.43.0-beta.1"
rusoto_s3 = "0.43.0-beta.1"
structopt = "0.3.11"
tokio = { version = "0.2", features = ["full"] }
mime_guess = "2.0.3"
serde_json = "1.0"
serde = "1.0"
